compiler/testData/diagnostics/tests/resolve/CycleInTypeArgs.fir.kt
class Class1<T : <!UNRESOLVED_REFERENCE!>Class2<Class1<X>><!>>

class Class2<T : <!UNRESOLVED_REFERENCE!>Class1<Class2<X>><!>>